// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakpoint renders correctly down prop 1`] = `
<DocumentFragment>
  .cache-1titrib-Breakpoint {
  display: none;
}

@media (max-width: 767px) {
  .cache-1titrib-Breakpoint {
    display: block;
  }
}

<div
    class="cache-1titrib-Breakpoint e18983st0"
  >
    Hello
  </div>
</DocumentFragment>
`;

exports[`Breakpoint renders correctly up prop 1`] = `
<DocumentFragment>
  .cache-1yjptq9-Breakpoint {
  display: none;
}

@media (min-width: 768px) {
  .cache-1yjptq9-Breakpoint {
    display: block;
  }
}

<div
    class="cache-1yjptq9-Breakpoint e18983st0"
  >
    Hello
  </div>
</DocumentFragment>
`;
